CHGS-10112024-Docker-compose-changes

--- a/docker-compose/default/common-config.yml
+++ b/docker-compose/default/common-config.yml
@@ -3,19 +3,6 @@ services:
     networks:
       - ecommerce
 
-  microservice-db-config:
-    extends:
-      service: network-deploy-service
-    image: mysql
-    healthcheck:
-      test: [ "CMD", "mysqladmin" ,"ping", "-h", "localhost" ]
-      timeout: 10s
-      retries: 10
-      interval: 10s
-      start_period: 10s
-    environment:
-      MYSQL_ROOT_PASSWORD: root
-
   microservice-base-config:
     extends:
       service: network-deploy-service
@@ -29,5 +16,10 @@ services:
       service: microservice-base-config
     environment:
       SPRING_PROFILES_ACTIVE: default
-      SPRING_DATASOURCE_USERNAME: root
-      SPRING_DATASOURCE_PASSWORD: root
+      SPRING_CONFIG_IMPORT: configserver:http://config-server:8071/
+
+  microservice-eurekaserver-config:
+    extends:
+      service: microservice-configserver-config
+    environment:
+      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://eureka-server:8070/eureka/
