CHGS-19112024-implementing circuit-breaker-pattern in gateway-server.

--- a/spring-cloud-api-gateway/spring-cloud-api-gateway/src/main/resources/application.yml
+++ b/spring-cloud-api-gateway/spring-cloud-api-gateway/src/main/resources/application.yml
@@ -28,5 +28,17 @@ info:
     version: "1.0.0"
 
 
+logging:
+  level:
+    com:
+      api:
+        gateway:
+          filter: DEBUG
 
-
+resilience4j.circuitbreaker:
+  configs:
+    default:
+      slidingWindowSize: 10  # number of request will it monitor to close-> open.
+      permittedNumberOfCallsInHalfOpenState: 2  # it will allow two request on half open state.
+      failureRateThreshold: 50 # Defines the failure rate (in percentage) at which the circuit breaker will transition from closed to open.
+      waitDurationInOpenState: 10000 #Specifies the amount of time (in milliseconds) that the circuit breaker will remain open before transitioning to the half-open state to attempt recovery.
